# AIRAN_dApps

./: .gitignore  README.md
dApp-library/examples/: interactive_control.py  scheduler_dapp.py
dApp-library/src/e3interface/: e3_connector.py
dApp-library/src/scheduler/: scheduler_dapp.py
openairinterface5g/: CMakeLists.txt
openairinterface5g/cmake_targets/: build_oai
openairinterface5g/common/utils/LOG/: log.h
openairinterface5g/common/utils/T/: T_messages.txt
openairinterface5g/common/utils/T/tracer/: utils.c
openairinterface5g/docker/: Dockerfile.base.ubuntu.arm64  Dockerfile.build.ubuntu.arm64  Dockerfile.gNB.ubuntu.arm64  Dockerfile.nrUE.ubuntu.arm64  build_arm64.sh  docker-compose.arm64.yml
openairinterface5g/executables/: nr-softmodem.c
openairinterface5g/openair1/SCHED_NR/: phy_procedures_nr_gNB.c
openairinterface5g/openair2/: CMakeLists.txt
openairinterface5g/openair2/E2AP/flexric/examples/xApp/c/monitor/RRC_MESSAGES/: CMakeLists.txt
openairinterface5g/openair2/E3AP/: CMakeLists.txt  e3_agent.c  e3_agent.h  e3_connector.c  e3_connector.h  e3_response_queue.c  e3_response_queue.h  e3_subscription_manager.c  e3_subscription_manager.h  e3ap_handler.c  e3ap_handler.h  e3ap_types.c  e3ap_types.h
openairinterface5g/openair2/E3AP/MESSAGES/ASN1/V1/: e3ap-1.0.0.cmake
openairinterface5g/openair2/E3AP/config/: e3_config.c  e3_config.h
openairinterface5g/openair2/E3AP/service_models/: CMakeLists.txt  sm_interface.h  sm_registry.c
openairinterface5g/openair2/E3AP/service_models/scheduler_sm/: CMakeLists.txt  CMakeLists.txt.old  scheduler_dec.c  scheduler_dec.h  scheduler_enc.c  scheduler_enc.h  scheduler_sm.c  scheduler_sm.h
openairinterface5g/openair2/E3AP/service_models/scheduler_sm/MESSAGES/: CMakeLists.txt
openairinterface5g/openair2/E3AP/service_models/scheduler_sm/MESSAGES/ASN1/V1/: e3sm_scheduler.asn  e3sm_scheduler.cmake
openairinterface5g/openair2/E3AP/service_models/spectrum_sm/: CMakeLists.txt  spectrum_dec.c  spectrum_dec.h  spectrum_enc.c  spectrum_enc.h  spectrum_sm.c  spectrum_sm.h
openairinterface5g/openair2/E3AP/service_models/spectrum_sm/MESSAGES/: CMakeLists.txt
openairinterface5g/openair2/E3AP/service_models/spectrum_sm/MESSAGES/ASN1/V1/: e3sm_spectrum.cmake
openairinterface5g/openair2/LAYER2/NR_MAC_COMMON/: nr_compute_tbs_common.c
openairinterface5g/openair2/LAYER2/NR_MAC_gNB/: gNB_scheduler.c  gNB_scheduler_dlsch.c  gNB_scheduler_primitives.c  gNB_scheduler_ulsch.c  mac_proto.h  main.c  nr_mac_gNB.h
openairinterface5g/targets/PROJECTS/GENERIC-NR-5GC/CONF/: gnb.band78.sa.fr1.106PRB.foxconn.conf  gnb.band78.sa.fr1.106PRB.usrpx300.conf  gnb.band78.sa.fr1.106PRB.usrpx400.conf  gnb.band78.sa.fr1.273PRB.foxconn.conf  gnb.sa.band78.fr1.106PRB.usrpb210.conf  ue.conf
